<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 标题 -->
    <ImageView
        android:id="@+id/back_site_find_work"
        android:layout_width="45dp"
        android:layout_height="20dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/back"
        app:layout_constraintEnd_toStartOf="@+id/textView_new_site"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_new_site"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:gravity="center_horizontal"
        android:text="@string/str_site_find_work"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/back_site_find_work"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="389dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_site_find_work"
        app:srcCompat="@drawable/site_pic_4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/str_site_find_work_project_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/str_site_find_work_project_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/str_site_find_work_project_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/str_site_find_work_project_cor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/str_site_find_work_project_work"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/str_site_find_work_project_salary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/site_find_work_project_code_content"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:text="@string/str_site_find_work_project_code_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/site_find_work_project_name_content"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:text="@string/str_site_find_work_project_name_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/site_find_work_project_location_content"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:text="@string/str_site_find_work_project_location_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/site_find_work_project_cor_content"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:text="@string/str_site_find_work_project_cor_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <TextView
        android:id="@+id/site_find_work_project_work_content"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:text="@string/str_site_find_work_project_work_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/site_find_work_project_salary_content"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:text="@string/str_site_find_work_project_salary_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <TextView
        android:id="@+id/site_find_work_contact_info"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/str_site_find_work_contact_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/site_find_work_contact_phone"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginLeft="1dp"
        android:layout_marginStart="1dp"
        android:text="@string/str_site_find_work_contact_phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/site_find_work_contact_info"
        app:layout_constraintStart_toEndOf="@+id/site_find_work_contact_info" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="344dp"
        android:layout_height="110dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/textview_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/site_find_work_contact_info" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="40dp"
        android:layout_height="26dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:text="@string/str_site_find_work_remark"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <TextView
        android:id="@+id/site_find_work_remark_content"
        android:layout_width="270dp"
        android:layout_height="78dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/str_site_find_work_remark_content"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <Button
        android:id="@+id/site_find_work_submit_application"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_shape1"
        android:text="@string/str_site_find_work_submit_application"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/site_find_work_tel_consultatoin"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="76dp"
        android:layout_marginStart="76dp"
        android:background="@drawable/button_shape1"
        android:clickable="true"
        android:focusable="true"
        android:onClick="callPhone"
        android:text="@string/str_site_find_work_tel_consultation"
        app:layout_constraintBaseline_toBaselineOf="@+id/site_find_work_submit_application"
        app:layout_constraintStart_toEndOf="@+id/site_find_work_submit_application" />


</android.support.constraint.ConstraintLayout>
