<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/home_fragment_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/co_fragment_bg"
        android:layout_weight="1">
        <!-- 存放五个Fragment-->
    </FrameLayout>
    <!-- 导航 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/co_white">
        <!-- 首页 -->
        <RelativeLayout
            android:id="@+id/home_first_page_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/home_first_pic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/first_page"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/home_first_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_first_pic"
                android:text="@string/str_home_first_page"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <!-- 附近 -->
        <RelativeLayout
            android:id="@+id/home_nearby_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/home_nearby_pic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/nearby"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/home_nearby_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_nearby_pic"
                android:text="@string/str_home_nearby"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <!-- 交流 -->
        <RelativeLayout
            android:id="@+id/home_communication_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/home_communication_pic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/communication"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/home_communication_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_communication_pic"
                android:text="@string/str_home_communication"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <!-- 培训 -->
        <RelativeLayout
            android:id="@+id/home_training_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/home_training_pic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/training"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/home_training_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_training_pic"
                android:text="@string/str_home_training"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <!-- 个人 -->
        <RelativeLayout
            android:id="@+id/home_personal_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/home_personal_pic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/personal"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/home_personal_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/home_personal_pic"
                android:text="@string/str_home_personal"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>